--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dev-portfolio",
   "version": "1.0.0",
-  "private": true,
+  "private": false,
   "description": "dev-portfolio",
   "author": "Adam Wilder",
   "keywords": [
