--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gatsby": "^4.9.3",
     "gatsby-plugin-image": "^2.9.1",
     "gatsby-plugin-manifest": "^4.9.1",
+    "gatsby-plugin-netlify": "^4.1.0",
     "gatsby-plugin-netlify-cms": "^6.9.0",
     "gatsby-plugin-react-helmet": "^5.9.0",
     "gatsby-plugin-react-svg": "^3.1.0",
