--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.1.3",
+    "framer-motion": "^6.3.11",
     "gatsby": "^4.7.2",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-image": "^2.9.1",
