--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-bootstrap": "^2.2.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "react-intersection-observer": "^9.3.3"
   }
 }
