--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bootstrap": "^5.1.3",
     "framer-motion": "^6.3.11",
     "gatsby": "^4.7.2",
+    "gatsby-background-image": "^1.6.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-image": "^2.9.1",
     "gatsby-plugin-manifest": "^4.9.1",
@@ -31,6 +32,7 @@
     "gatsby-source-filesystem": "^4.9.1",
     "gatsby-transformer-remark": "^5.9.1",
     "gatsby-transformer-sharp": "^4.9.0",
+    "gbimage-bridge": "^0.2.1",
     "netlify-cms-app": "^2.15.69",
     "react": "^17.0.1",
     "react-bootstrap": "^2.2.1",
