--- a/package.json
+++ b/package.json
@@ -5,7 +5,13 @@
   "description": "dev-portfolio",
   "author": "Adam Wilder",
   "keywords": [
-    "gatsby"
+    "gatsby",
+    "web developer",
+    "react",
+    "front end",
+    "programmer",
+    "adam wilder",
+    "portfolio"
   ],
   "scripts": {
     "develop": "gatsby develop",
@@ -24,7 +30,7 @@
     "gatsby-plugin-manifest": "^4.9.1",
     "gatsby-plugin-netlify": "^4.1.0",
     "gatsby-plugin-netlify-cms": "^6.9.0",
-    "gatsby-plugin-react-helmet": "^5.9.0",
+    "gatsby-plugin-react-helmet": "^5.17.0",
     "gatsby-plugin-react-svg": "^3.1.0",
     "gatsby-plugin-sharp": "^4.9.0",
     "gatsby-plugin-sitemap": "^5.9.0",
